Arreglo de interpretacion de la factura
Ahora la factura las hacen las ordenes, y en el caso de las ordenes de
importacion les agrega el coste del viaje completo.